simulation/web_monitor/rerun/crates/store/re_importer/src/importer_mcap/tests/snapshots/foxglove_poses_in_frame.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/foxglove_poses_in_frame.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                              │
│ * entity_path: /pose_in_frame                                                                                                                                                                                          │
│ * id: [**REDACTED**]                                                                                                                                                                                                   │
│ * version: [**REDACTED**]                                                                                                                                                                                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌─────────────────────────────────────┬───────────────────────────────┬───────────────────────────────┬──────────────────────────────────┬─────────────────────────────────────┬─────────────────────────────────────┐ │
│ │ RowId                               ┆ message_time                  ┆ publish_time                  ┆ CoordinateFrame:frame            ┆ InstancePoses3D:quaternions         ┆ InstancePoses3D:translations        │ │
│ │ ---                                 ┆ ---                           ┆ ---                           ┆ ---                              ┆ ---                                 ┆ ---                                 │ │
│ │ type: non-null FixedSizeBinary(16)  ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)           ┆ type: List(Utf8)                 ┆ type: List(FixedSizeList(4 x        ┆ type: List(FixedSizeList(3 x        │ │
│ │ ARROW:extension:metadata:           ┆ index_name: message_time      ┆ index_name: publish_time      ┆ archetype: CoordinateFrame       ┆ non-null Float32))                  ┆ non-null Float32))                  │ │
│ │ {"namespace":"row"}                 ┆ is_sorted: true               ┆ is_sorted: true               ┆ component: CoordinateFrame:frame ┆ archetype: InstancePoses3D          ┆ archetype: InstancePoses3D          │ │
│ │ ARROW:extension:name: TUID          ┆ kind: index                   ┆ kind: index                   ┆ component_type: TransformFrameId ┆ component:                          ┆ component:                          │ │
│ │ is_sorted: true                     ┆                               ┆                               ┆ kind: data                       ┆ InstancePoses3D:quaternions         ┆ InstancePoses3D:translations        │ │
│ │ kind: control                       ┆                               ┆                               ┆                                  ┆ component_type: RotationQuat        ┆ component_type: Translation3D       │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ kind: data                          ┆ kind: data                          │ │
│ ╞═════════════════════════════════════╪═══════════════════════════════╪═══════════════════════════════╪══════════════════════════════════╪═════════════════════════════════════╪═════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                  ┆ 2026-04-02T13:40:27.787987968 ┆ 2026-04-02T13:40:27.787987968 ┆ [map]                            ┆ [[0.0, 0.0, 0.25881904, 0.9659258]] ┆ [[1.0, 2.0, 0.5]]                   │ │
│ └─────────────────────────────────────┴───────────────────────────────┴───────────────────────────────┴──────────────────────────────────┴─────────────────────────────────────┴─────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                              │
│ * entity_path: /poses_in_frame                                                                                                                                                                                         │
│ * id: [**REDACTED**]                                                                                                                                                                                                   │
│ * version: [**REDACTED**]                                                                                                                                                                                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌─────────────────────────────────────┬───────────────────────────────┬───────────────────────────────┬──────────────────────────────────┬─────────────────────────────────────┬─────────────────────────────────────┐ │
│ │ RowId                               ┆ message_time                  ┆ publish_time                  ┆ CoordinateFrame:frame            ┆ InstancePoses3D:quaternions         ┆ InstancePoses3D:translations        │ │
│ │ ---                                 ┆ ---                           ┆ ---                           ┆ ---                              ┆ ---                                 ┆ ---                                 │ │
│ │ type: non-null FixedSizeBinary(16)  ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)           ┆ type: List(Utf8)                 ┆ type: List(FixedSizeList(4 x        ┆ type: List(FixedSizeList(3 x        │ │
│ │ ARROW:extension:metadata:           ┆ index_name: message_time      ┆ index_name: publish_time      ┆ archetype: CoordinateFrame       ┆ non-null Float32))                  ┆ non-null Float32))                  │ │
│ │ {"namespace":"row"}                 ┆ is_sorted: true               ┆ is_sorted: true               ┆ component: CoordinateFrame:frame ┆ archetype: InstancePoses3D          ┆ archetype: InstancePoses3D          │ │
│ │ ARROW:extension:name: TUID          ┆ kind: index                   ┆ kind: index                   ┆ component_type: TransformFrameId ┆ component:                          ┆ component:                          │ │
│ │ is_sorted: true                     ┆                               ┆                               ┆ kind: data                       ┆ InstancePoses3D:quaternions         ┆ InstancePoses3D:translations        │ │
│ │ kind: control                       ┆                               ┆                               ┆                                  ┆ component_type: RotationQuat        ┆ component_type: Translation3D       │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ kind: data                          ┆ kind: data                          │ │
│ ╞═════════════════════════════════════╪═══════════════════════════════╪═══════════════════════════════╪══════════════════════════════════╪═════════════════════════════════════╪═════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                  ┆ 2026-04-02T13:40:27.888009728 ┆ 2026-04-02T13:40:27.888009728 ┆ [map]                            ┆ [[0.0, 0.0, 0.0, 1.0], [0.0, 0.0,   ┆ [[0.0, 0.0, 0.0], [1.0, 0.5, 0.0],  │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ 0.38268343, 0.9238795], [0.0, 0.0,  ┆ [2.0, 1.0, 0.0]]                    │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ 0.70710677, 0.70710677]]            ┆                                     │ │
│ └─────────────────────────────────────┴───────────────────────────────┴───────────────────────────────┴──────────────────────────────────┴─────────────────────────────────────┴─────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
