simulation/web_monitor/rerun/crates/store/re_importer/src/importer_mcap/tests/snapshots/foxglove_raw_image.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/foxglove_raw_image.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                              │
│ * entity_path: /camera/raw_image                                                                                                                                                                                       │
│ * id: [**REDACTED**]                                                                                                                                                                                                   │
│ * version: [**REDACTED**]                                                                                                                                                                                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌─────────────────────────────────────┬───────────────────────────────┬───────────────────────────────┬──────────────────────────────────┬─────────────────────────────────────┬─────────────────────────────────────┐ │
│ │ RowId                               ┆ message_time                  ┆ publish_time                  ┆ CoordinateFrame:frame            ┆ Image:buffer                        ┆ Image:format                        │ │
│ │ ---                                 ┆ ---                           ┆ ---                           ┆ ---                              ┆ ---                                 ┆ ---                                 │ │
│ │ type: non-null FixedSizeBinary(16)  ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)           ┆ type: List(Utf8)                 ┆ type: List(List(non-null UInt8))    ┆ type: List(Struct("width": non-null │ │
│ │ ARROW:extension:metadata:           ┆ index_name: message_time      ┆ index_name: publish_time      ┆ archetype: CoordinateFrame       ┆ archetype: Image                    ┆ UInt32, "height": non-null UInt32,  │ │
│ │ {"namespace":"row"}                 ┆ is_sorted: true               ┆ is_sorted: true               ┆ component: CoordinateFrame:frame ┆ component: Image:buffer             ┆ "pixel_format": UInt8,              │ │
│ │ ARROW:extension:name: TUID          ┆ kind: index                   ┆ kind: index                   ┆ component_type: TransformFrameId ┆ component_type: ImageBuffer         ┆ "color_model": UInt8,               │ │
│ │ is_sorted: true                     ┆                               ┆                               ┆ kind: data                       ┆ kind: data                          ┆ "channel_datatype": UInt8))         │ │
│ │ kind: control                       ┆                               ┆                               ┆                                  ┆                                     ┆ archetype: Image                    │ │
│ │                                     ┆                               ┆                               ┆                                  ┆                                     ┆ component: Image:format             │ │
│ │                                     ┆                               ┆                               ┆                                  ┆                                     ┆ component_type: ImageFormat         │ │
│ │                                     ┆                               ┆                               ┆                                  ┆                                     ┆ kind: data                          │ │
│ ╞═════════════════════════════════════╪═══════════════════════════════╪═══════════════════════════════╪══════════════════════════════════╪═════════════════════════════════════╪═════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                  ┆ 2026-02-11T11:30:54.931614976 ┆ 2026-02-11T11:30:54.931614976 ┆ [camera_frame_image_plane]       ┆ [[255, 0, 0, 255, 127, 0, 255, 255, ┆ [{width: 10, height: 10,            │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ 0, 0, 255, 0, 0, 0, 255, 75, 0,     ┆ pixel_format: null, color_model: 2, │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ 130, 148, 0, 211, 255, 0, 0, 25…    ┆ channel_datatype: 6}]               │ │
│ └─────────────────────────────────────┴───────────────────────────────┴───────────────────────────────┴──────────────────────────────────┴─────────────────────────────────────┴─────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
