simulation/web_monitor/rerun/crates/store/re_importer/src/importer_mcap/tests/snapshots/foxglove_voxel_grid.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/foxglove_voxel_grid.mcap
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                                   │
│ * entity_path: /voxel_grid                                                                                                                                                                                                                  │
│ * id: [**REDACTED**]                                                                                                                                                                                                                        │
│ * version: [**REDACTED**]                                                                                                                                                                                                                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┐ │
│ │ RowId                   ┆ message_time            ┆ publish_time            ┆ CoordinateFrame:frame   ┆ VoxelGridMap:colors     ┆ VoxelGridMap:quaternion ┆ VoxelGridMap:translatio ┆ VoxelGridMap:voxel_indi ┆ VoxelGridMap:voxel_size │ │
│ │ ---                     ┆ ---                     ┆ ---                     ┆ ---                     ┆ ---                     ┆ ---                     ┆ n                       ┆ ces                     ┆ ---                     │ │
│ │ type: non-null          ┆ type: Timestamp(ns)     ┆ type: Timestamp(ns)     ┆ type: List(Utf8)        ┆ type: List(UInt32)      ┆ type:                   ┆ ---                     ┆ ---                     ┆ type:                   │ │
│ │ FixedSizeBinary(16)     ┆ index_name:             ┆ index_name:             ┆ archetype:              ┆ archetype: VoxelGridMap ┆ List(FixedSizeList(4 x  ┆ type:                   ┆ type:                   ┆ List(FixedSizeList(3 x  │ │
│ │ ARROW:extension:metadat ┆ message_time            ┆ publish_time            ┆ CoordinateFrame         ┆ component:              ┆ non-null Float32))      ┆ List(FixedSizeList(3 x  ┆ List(FixedSizeList(3 x  ┆ non-null Float32))      │ │
│ │ a: {"namespace":"row"}  ┆ is_sorted: true         ┆ is_sorted: true         ┆ component:              ┆ VoxelGridMap:colors     ┆ archetype: VoxelGridMap ┆ non-null Float32))      ┆ non-null Int32))        ┆ archetype: VoxelGridMap │ │
│ │ ARROW:extension:name:   ┆ kind: index             ┆ kind: index             ┆ CoordinateFrame:frame   ┆ component_type: Color   ┆ component:              ┆ archetype: VoxelGridMap ┆ archetype: VoxelGridMap ┆ component:              │ │
│ │ TUID                    ┆                         ┆                         ┆ component_type:         ┆ kind: data              ┆ VoxelGridMap:quaternion ┆ component: VoxelGridMap ┆ component: VoxelGridMap ┆ VoxelGridMap:voxel_size │ │
│ │ is_sorted: true         ┆                         ┆                         ┆ TransformFrameId        ┆                         ┆ component_type:         ┆ :translation            ┆ :voxel_indices          ┆ component_type:         │ │
│ │ kind: control           ┆                         ┆                         ┆ kind: data              ┆                         ┆ RotationQuat            ┆ component_type:         ┆ component_type:         ┆ VoxelSize               │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆ kind: data              ┆ Translation3D           ┆ VoxelIndex              ┆ kind: data              │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆ kind: data              ┆ kind: data              ┆                         │ │
│ ╞═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╡ │
│ │ row_[**REDACTED**]      ┆ 2026-06-18T10:14:34.219 ┆ 2026-06-18T10:14:34.219 ┆ [world]                 ┆ [4278190260, 16711860,  ┆ [[0.0, 0.0, 0.38268343, ┆ [[1.0, 0.5, 0.25]]      ┆ [[0, 0, 0], [1, 0, 0],  ┆ [[0.25, 0.5, 0.75]]     │ │
│ │                         ┆ 693056                  ┆ 693056                  ┆                         ┆ 65460, 4294901940,      ┆ 0.9238795]]             ┆                         ┆ [0, 1, 0], [1, 1, 0],   ┆                         │ │
│ │                         ┆                         ┆                         ┆                         ┆ 4278255540, 16777140,   ┆                         ┆                         ┆ [0, 0, 1], [1, 0, 1],   ┆                         │ │
│ │                         ┆                         ┆                         ┆                         ┆ 4294967220, 4286578868] ┆                         ┆                         ┆ [0, 1, 1], [1, 1, 1]]   ┆                         │ │
│ └─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
