simulation/web_monitor/rerun/crates/store/re_importer/src/importer_mcap/tests/snapshots/ros_camera_info.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/ros_camera_info.mcap
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                    │
│ * entity_path: /camera/camera_info                                                                                                                                                                                           │
│ * id: [**REDACTED**]                                                                                                                                                                                                         │
│ * version: [**REDACTED**]                                                                                                                                                                                                    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌────────────────────────────────┬──────────────────────────┬──────────────────────────┬────────────────────────────────┬────────────────────────────────┬────────────────────────────────┬────────────────────────────────┐ │
│ │ RowId                          ┆ message_time             ┆ publish_time             ┆ Pinhole:child_frame            ┆ Pinhole:image_from_camera      ┆ Pinhole:parent_frame           ┆ Pinhole:resolution             │ │
│ │ ---                            ┆ ---                      ┆ ---                      ┆ ---                            ┆ ---                            ┆ ---                            ┆ ---                            │ │
│ │ type: non-null                 ┆ type: Timestamp(ns)      ┆ type: Timestamp(ns)      ┆ type: List(Utf8)               ┆ type: List(FixedSizeList(9 x   ┆ type: List(Utf8)               ┆ type: List(FixedSizeList(2 x   │ │
│ │ FixedSizeBinary(16)            ┆ index_name: message_time ┆ index_name: publish_time ┆ archetype: Pinhole             ┆ non-null Float32))             ┆ archetype: Pinhole             ┆ non-null Float32))             │ │
│ │ ARROW:extension:metadata:      ┆ is_sorted: true          ┆ is_sorted: true          ┆ component: Pinhole:child_frame ┆ archetype: Pinhole             ┆ component:                     ┆ archetype: Pinhole             │ │
│ │ {"namespace":"row"}            ┆ kind: index              ┆ kind: index              ┆ component_type:                ┆ component:                     ┆ Pinhole:parent_frame           ┆ component: Pinhole:resolution  │ │
│ │ ARROW:extension:name: TUID     ┆                          ┆                          ┆ TransformFrameId               ┆ Pinhole:image_from_camera      ┆ component_type:                ┆ component_type: Resolution     │ │
│ │ is_sorted: true                ┆                          ┆                          ┆ kind: data                     ┆ component_type:                ┆ TransformFrameId               ┆ kind: data                     │ │
│ │ kind: control                  ┆                          ┆                          ┆                                ┆ PinholeProjection              ┆ kind: data                     ┆                                │ │
│ │                                ┆                          ┆                          ┆                                ┆ kind: data                     ┆                                ┆                                │ │
│ ╞════════════════════════════════╪══════════════════════════╪══════════════════════════╪════════════════════════════════╪════════════════════════════════╪════════════════════════════════╪════════════════════════════════╡ │
│ │ row_[**REDACTED**]             ┆ 1970-01-01T00:00:00      ┆ 1970-01-01T00:00:00      ┆ [camera_optical_frame_image_pl ┆ [[525.0, 0.0, 0.0, 0.0, 525.0, ┆ [camera_optical_frame]         ┆ [[640.0, 480.0]]               │ │
│ │                                ┆                          ┆                          ┆ ane]                           ┆ 0.0, 319.5, 239.5, 1.0]]       ┆                                ┆                                │ │
│ └────────────────────────────────┴──────────────────────────┴──────────────────────────┴────────────────────────────────┴────────────────────────────────┴────────────────────────────────┴────────────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
