simulation/web_monitor/rerun/crates/store/re_importer/src/importer_mcap/tests/snapshots/ros_pose_stamped.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/ros_pose_stamped.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                              │
│ * entity_path: /pose_stamped                                                                                                                                                                                           │
│ * id: [**REDACTED**]                                                                                                                                                                                                   │
│ * version: [**REDACTED**]                                                                                                                                                                                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌─────────────────────────────────────┬───────────────────────────────┬───────────────────────────────┬──────────────────────────────────┬─────────────────────────────────────┬─────────────────────────────────────┐ │
│ │ RowId                               ┆ message_time                  ┆ publish_time                  ┆ CoordinateFrame:frame            ┆ InstancePoses3D:quaternions         ┆ InstancePoses3D:translations        │ │
│ │ ---                                 ┆ ---                           ┆ ---                           ┆ ---                              ┆ ---                                 ┆ ---                                 │ │
│ │ type: non-null FixedSizeBinary(16)  ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)           ┆ type: List(Utf8)                 ┆ type: List(FixedSizeList(4 x        ┆ type: List(FixedSizeList(3 x        │ │
│ │ ARROW:extension:metadata:           ┆ index_name: message_time      ┆ index_name: publish_time      ┆ archetype: CoordinateFrame       ┆ non-null Float32))                  ┆ non-null Float32))                  │ │
│ │ {"namespace":"row"}                 ┆ is_sorted: true               ┆ is_sorted: true               ┆ component: CoordinateFrame:frame ┆ archetype: InstancePoses3D          ┆ archetype: InstancePoses3D          │ │
│ │ ARROW:extension:name: TUID          ┆ kind: index                   ┆ kind: index                   ┆ component_type: TransformFrameId ┆ component:                          ┆ component:                          │ │
│ │ is_sorted: true                     ┆                               ┆                               ┆ kind: data                       ┆ InstancePoses3D:quaternions         ┆ InstancePoses3D:translations        │ │
│ │ kind: control                       ┆                               ┆                               ┆                                  ┆ component_type: RotationQuat        ┆ component_type: Translation3D       │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ kind: data                          ┆ kind: data                          │ │
│ ╞═════════════════════════════════════╪═══════════════════════════════╪═══════════════════════════════╪══════════════════════════════════╪═════════════════════════════════════╪═════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                  ┆ 2026-05-13T19:44:56.104003072 ┆ 2026-05-13T19:44:56.104003072 ┆ [map]                            ┆ [[0.0, 0.0, 0.0, 1.0]]              ┆ [[0.0, 0.0, 0.0]]                   │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                  ┆ 2026-05-13T19:44:56.204003072 ┆ 2026-05-13T19:44:56.204003072 ┆ [map]                            ┆ [[0.0, 0.0, 0.38268343, 0.9238795]] ┆ [[1.0, 0.5, 0.0]]                   │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                  ┆ 2026-05-13T19:44:56.304003328 ┆ 2026-05-13T19:44:56.304003328 ┆ [map]                            ┆ [[0.0, 0.0, 0.70710677,             ┆ [[2.0, 1.0, 0.0]]                   │ │
│ │                                     ┆                               ┆                               ┆                                  ┆ 0.70710677]]                        ┆                                     │ │
│ └─────────────────────────────────────┴───────────────────────────────┴───────────────────────────────┴──────────────────────────────────┴─────────────────────────────────────┴─────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
