simulation/web_monitor/rerun/crates/store/re_importer/src/importer_mcap/tests/snapshots/ros_string.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/store/re_importer/src/importer_mcap/tests/assets/ros_string.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                  │
│ * entity_path: /chatter                                                                                                                    │
│ * id: [**REDACTED**]                                                                                                                       │
│ * version: [**REDACTED**]                                                                                                                  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬────────────────────────────┬────────────────────────────┬──────────────────────────────┐ │
│ │ RowId                                         ┆ message_time               ┆ publish_time               ┆ TextDocument:text            │ │
│ │ ---                                           ┆ ---                        ┆ ---                        ┆ ---                          │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Timestamp(ns)        ┆ type: Timestamp(ns)        ┆ type: List(Utf8)             │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: message_time   ┆ index_name: publish_time   ┆ archetype: TextDocument      │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true            ┆ is_sorted: true            ┆ component: TextDocument:text │ │
│ │ is_sorted: true                               ┆ kind: index                ┆ kind: index                ┆ component_type: Text         │ │
│ │ kind: control                                 ┆                            ┆                            ┆ kind: data                   │ │
│ ╞═══════════════════════════════════════════════╪════════════════════════════╪════════════════════════════╪══════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 2026-05-18T16:02:02.608106 ┆ 2026-05-18T16:02:02.608106 ┆ [hello]                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 2026-05-18T16:02:02.708106 ┆ 2026-05-18T16:02:02.708106 ┆ [world]                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 2026-05-18T16:02:02.808106 ┆ 2026-05-18T16:02:02.808106 ┆ [from mcap-bakery]           │ │
│ └───────────────────────────────────────────────┴────────────────────────────┴────────────────────────────┴──────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
